# exorcise

./: .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md
docs/: DOCS.md
drivers/pyscho/: ioctl.h
include/compiler/: compiler_attribute.hpp
include/pyscho/: pyscho.hpp
include/yara/: yara.hpp
interfaces/pyscho/: ipyscho.hpp
interfaces/yara/: iyara.hpp
rules/: IceFire.yar
sources/: CMakeLists.txt  main.cpp
sources/pyscho/: pyscho.cpp
sources/yara/: yara.cpp
tests/: CMakeLists.txt
tests/yara/: CMakeLists.txt  yara_tests.cpp
tests/yara/rules/: teste.yar
